{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 8,
  "lineage": "10618f0b-a4d3-cd98-d2ee-de90cf5373bf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "tf_private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0b7004ebb4152388a",
            "id": "rtb-0b7004ebb4152388a",
            "owner_id": "337546370768",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "tf_private"
            },
            "vpc_id": "vpc-0e478e79da2a18439"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0bff050a705d7369a",
            "owner_id": "337546370768",
            "tags": {
              "Name": "tf_igw"
            },
            "vpc_id": "vpc-0e478e79da2a18439"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-067378121810d0739",
            "owner_id": "337546370768",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bff050a705d7369a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_public"
            },
            "vpc_id": "vpc-0e478e79da2a18439"
          },
          "dependencies": [
            "aws_internet_gateway.tf_internet_gateway",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_public_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337546370768:security-group/sg-0731c645808908aaa",
            "description": "Used for access to the public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0731c645808908aaa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf_public_sg",
            "name_prefix": null,
            "owner_id": "337546370768",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e478e79da2a18439"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337546370768:subnet/subnet-0a0de5843eb637021",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.123.1.0/24",
            "id": "subnet-0a0de5843eb637021",
            "map_public_ip_on_launch": true,
            "owner_id": "337546370768",
            "tags": {
              "Name": "tf_public_1"
            },
            "vpc_id": "vpc-0e478e79da2a18439"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337546370768:subnet/subnet-0bb32a28f49e20e81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.123.2.0/24",
            "id": "subnet-0bb32a28f49e20e81",
            "map_public_ip_on_launch": true,
            "owner_id": "337546370768",
            "tags": {
              "Name": "tf_public_2"
            },
            "vpc_id": "vpc-0e478e79da2a18439"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337546370768:vpc/vpc-0e478e79da2a18439",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-059757dd99fe5da58",
            "default_route_table_id": "rtb-0b7004ebb4152388a",
            "default_security_group_id": "sg-02d7ae95380ab1680",
            "dhcp_options_id": "dopt-93af29eb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e478e79da2a18439",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b7004ebb4152388a",
            "owner_id": "337546370768",
            "tags": {
              "Name": "tf_vpc"
            }
          }
        }
      ]
    }
  ]
}